--- a/package.json
+++ b/package.json
@@ -3,14 +3,26 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "next start",
+    "dev": "next",
+    "build": "next build"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
+    "antd": "^3.25.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "less": "^3.10.3",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11"
+    "next": "^9.1.4",
+    "pug": "2.0.0-beta11",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.1"
   }
 }
