--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "next start",
     "dev": "next",
-    "build": "next build"
+    "build": "next build",
+    "express": "nodemon bin/www"
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
